Sonarqube Cleanup and slight version bump